# AlphaAutoResearch

./: .gitignore  LICENSE  README.ZH.md  README.md  begin_research.bash  convert_blog_rednote.bash  mkdocs.yml  pyproject.toml  readme.md  requirements.txt  research_claudecode.example.json  research_config.example.jsonc  run_blueprint_directly.bash  snapshot_pages.sh  terminate_local_research.bash  test_ssh_connection.bash
alpha_auto_research/: claudecode_runner.py  cli.py  cli_claudecode.py  cli_general.py  general_runner.py  opencode_runner.py
alpha_auto_research/blueprint_runner/: pai_runner.py  ssh_runner.py
alpha_auto_research/pai/: client.py
alpha_auto_research/skills/banana_image/: SKILL.md  banana_image_generate.md
alpha_auto_research/skills/blueprint_gen/: SKILL.md
alpha_auto_research/skills/leader_experiment/: SKILL.md
alpha_auto_research/skills/leader_experiment_no_human/: SKILL.md
alpha_auto_research/skills/worker_experiment/: SKILL.md
alpha_auto_research/skills/writing/: rednote.md
alpha_auto_research/skills/writing/cover/: SKILL.md
alpha_auto_research/skills/writing/general_markdown/: SKILL.md
alpha_auto_research/skills/writing/rednote/: SKILL.md
alpha_auto_research/skills/writing/rednote_snapshot/: SKILL.md  adjust_seams.py  screenshot.js  snapshot_pages.sh  stitch_long.py
alpha_auto_research/utils/: claudecode_printer.py  opencode_printer.py
docs/: index.md
docs/articles/ppo_epoch_minibatch/: index.md
docs/overrides/partials/: footer.html
rl_auto_research/: cli.py  config.py  opencode_runner.py
rl_auto_research/blueprint_runner/: __init__.py  base.py  blueprint_runner.py  pai_runner.py  scan_jobs.py  ssh_runner.py
rl_auto_research/pai/: client.py
skills/: leader_experiment.md  leader_experiment.no_human.md  worker_experiment.md
